crates/engage/tests/integrations/snapshots/integrations__dependency_cycle_list@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should refuse to print the list of processes because there are dependency cycles.
---
Note: the `-r`/`--relaxed` option can be used to treat the following errors as warnings

Error #1
Description: the Engage file contains invalid dependencies
Help: try using `engage dot` with the `-r`/`--relaxed` option to visualize the graph to assist in debugging and fixing the issues

Error #2 (which caused #1)
Description: the dependencies between `b` and `a` form a cycle

Error #3 (which caused #1)
Description: the dependencies between `e`, `d`, and `c` form a cycle
