crates/engage/tests/integrations/snapshots/integrations__dependency_cycle_self_loop@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---
Error #1
Description: the Engage file contains invalid dependencies
Help: try using `engage dot` with the `-r`/`--relaxed` option to visualize the graph to assist in debugging and fixing the issues

Error #2 (which caused #1)
Description: `b` depends on itself
