crates/engage/tests/integrations/snapshots/integrations__dependency_cycle_self_loop@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error about dependency cycles.
---

