crates/engage/tests/integrations/snapshots/integrations__dependency_cycle_self_loop_dot@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
Warning #1
Description: `b` depends on itself
