crates/engage/tests/integrations/snapshots/integrations__dependency_cycle_self_loop_dot_relaxed@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should show the graphviz dot representation even though there are cycles.
---
Some(
    0,
)
