crates/engage/tests/integrations/snapshots/integrations__disconnected_parts_dot_relaxed@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should print a graph and warnings of a disconnected multi-part process.
---
Some(
    0,
)
